--- a/centos6/packages-ubuntu.cfg
+++ b/centos6/packages-ubuntu.cfg
@@ -8,6 +8,6 @@ linux-image-generic
 grub-common
 grub2-common
 sudo
-vi 
+vim
 #-------------------------------------------------------------------------------
 # Aditional packages to install
